--- a/projectLIT/authapp/templates/authapp/base.html
+++ b/projectLIT/authapp/templates/authapp/base.html
@@ -21,20 +21,9 @@
     {% endblock %}
 </head>
 <body>
-    <div class="menu">
-       <div class="menu-elements">
-        <ul class="menu-list">
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:main' %}">News</a></li>
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:playlists' %}">Playlists</a></li>
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:accounts' %}">Connected accounts</a></li>
-            <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
-            <li class="log-out-element"><a class="menu-element-pressed" href="{% url 'auth:logout' %}">Log out</a></li>
-            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'mainapp:account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
-        </ul>
-    </div>
-    </div>
-            
+{% block menu %}
+
+{%  endblock %}
             {% block content %}
 
             {% endblock %}
