--- a/projectLIT/authapp/templates/authapp/register.html
+++ b/projectLIT/authapp/templates/authapp/register.html
@@ -1,7 +1,21 @@
 {% extends 'authapp/base.html' %}
 {% load staticfiles %}
 
-
+{%  block menu %}
+    <div class="menu">
+       <div class="menu-elements">
+        <ul class="menu-list">
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:main' %}">News</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:playlists' %}">Playlists</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:accounts' %}">Connected accounts</a></li>
+            <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
+            <li class="log-out-element"><a class="menu-element-pressed" href="{% url 'auth:register' %}">Registration</a></li>
+            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">IRENE</a></li>
+            <li class="photo-element"><a href="{% url 'mainapp:account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
+        </ul>
+    </div>
+    </div>
+{% endblock %}
 {% block content %}
 
 <div class="registration-content">
