add account page correct display
+ add account page display
+ remove bugs with login/logout/register labels in menu

--- a/projectLIT/authapp/templates/authapp/login.html
+++ b/projectLIT/authapp/templates/authapp/login.html
@@ -10,7 +10,7 @@
             <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:accounts' %}">Connected accounts</a></li>
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
             <li class="log-out-element"><a class="menu-element-pressed" href="{% url 'auth:login' %}">Log in</a></li>
-            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">IRENE</a></li>
+{#            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">IRENE</a></li>#}
             <li class="photo-element"><a href="{% url 'mainapp:account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
