--- a/projectLIT/mainapp/templates/mainapp/index.html
+++ b/projectLIT/mainapp/templates/mainapp/index.html
@@ -10,7 +10,8 @@
             <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:accounts' %}">Connected accounts</a></li>
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
             <li class="log-out-element"><a class="menu-element-href" href="{% url 'auth:logout' %}">{{ log_message}}</a></li>
-            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">{{ username }}</a></li>
+            {% if username != '' %}<li class="menu-element-name"><a href="{% url 'mainapp:account' %}">{{ username }}</a></li>
+            {% endif %}
             <li class="photo-element"><a href="{% url 'mainapp:account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
@@ -20,8 +21,13 @@
     <div class="content-news-beginning">
     <div class="content-news-beginning-inside">
         <p class="content-news-beginning-header">Ready to understand your favourite artists better?</p>
-        <a href="{% url 'auth:register' %}"><button class="content-news-beginning-button-register">Create an account</button></a>
-        <a href="{% url 'auth:login' %}"><button class="content-news-beginning-button-login">Log in</button></a>
+        {% if authenticated == False %}
+            <a href="{% url 'auth:register' %}"><button class="content-news-beginning-button-register">Create an account</button></a>
+            <a href="{% url 'auth:login' %}"><button class="content-news-beginning-button-login">Log in</button></a>
+        {%  else %}
+            <a href="{% url 'mainapp:accounts' %}"><button class="content-news-beginning-button-login">Connect accounts and load your library</button></a>
+        {% endif %}
+
     </div>
     </div>
     <div class="content-news">
