--- a/projectLIT/mainapp/templates/mainapp/playlists.html
+++ b/projectLIT/mainapp/templates/mainapp/playlists.html
@@ -10,7 +10,8 @@
             <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:accounts' %}">Connected accounts</a></li>
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
             <li class="log-out-element"><a class="menu-element-href" href="{% url 'auth:logout' %}">Log out</a></li>
-            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">{{ username }}</a></li>
+            {% if username != '' %}<li class="menu-element-name"><a href="{% url 'mainapp:account' %}">{{ username }}</a></li>
+            {% endif %}
             <li class="photo-element"><a href="{% url 'mainapp:account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
