add connectYM without check
+ add connectYM, no check if an account exists

--- a/projectLIT/mainapp/templates/mainapp/account.html
+++ b/projectLIT/mainapp/templates/mainapp/account.html
@@ -25,7 +25,7 @@
        </div>
        <div class="account-information">
            <div class="account-information-main">
-               <p class="account-name-surname">{{ first_name }} {{ last_name }}</p>
+               <p class="account-name-surname">{{ first_name.title }} {{ last_name.title }}</p>
            </div>
            <div class="account-information-additional">
                <p class="account-registration-date">Registered: {{ date_joined }}</p>
