add genre, style and label addition
no albums, no artists yet, no albums display, no YM account validation if you try to add it again, no existence check

--- a/projectLIT/authapp/templates/authapp/edit.html
+++ b/projectLIT/authapp/templates/authapp/edit.html
@@ -24,8 +24,8 @@
         <input class="form_edit_button" type="submit" value="save">
     </form>
     <button class="form_edit_button">
-        <a href="{% url 'mainapp:main' %}" class="form_edit_href">
-            main page
+        <a href="{% url 'mainapp:account' %}" class="form_edit_href">
+            leave without changes
         </a>
     </button>
 {#    <div class="user_avatar"><img src="/media/{{ user.avatar }}"></div>#}
