--- a/projectLIT/mainapp/templates/mainapp/playlists.html
+++ b/projectLIT/mainapp/templates/mainapp/playlists.html
@@ -25,7 +25,7 @@
     {% endif %}
             <div class="playlists-inside">
                 {%  for album in albums %}
-                    <a class="playlist-href" href="/playlist/">
+                    <a class="playlist-href" href="{% url 'mainapp:playlist' album.pk %}">
                 <div class="playlist">
                     <div class="playlist-inside">
                         <p class="playlist-name">{{ album.name }}</p>
